--- a/.drone.yml
+++ b/.drone.yml
@@ -14,14 +14,19 @@ steps:
         from_secret: DOCKER_IMAGE_NAME
       DOCKER_REGISTRY_USER:
         from_secret: DOCKER_REGISTRY_USER
+      STRUCHKOV_DOCKER_IMAGE_NAME:
+        from_secret: STRUCHKOV_DOCKER_IMAGE_NAME
+      STRUCHKOV_DOCKER_REGISTRY_TOKEN:
+        from_secret: STRUCHKOV_DOCKER_REGISTRY_TOKEN
     volumes:
       - name: dockersock
         path: /var/run
     commands:
       - sleep 15
       - echo "$DOCKER_REGISTRY_TOKEN" | docker login docker.io --username $DOCKER_REGISTRY_USER --password-stdin
+      - echo "$STRUCHKOV_DOCKER_REGISTRY_TOKEN" | docker login git.struchkov.dev --username $DOCKER_REGISTRY_USER --password-stdin
       - docker buildx create --use
-      - docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t "$DOCKER_IMAGE_NAME:new" .
+      - docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t "$DOCKER_IMAGE_NAME:new" -t "git.struchkov.dev/$STRUCHKOV_DOCKER_IMAGE_NAME:latest" .
 #      - docker build -t "$DOCKER_IMAGE_NAME:latest" .
 #      - docker push "$DOCKER_IMAGE_NAME:latest"
 
@@ -42,6 +47,6 @@ volumes:
     temp: {}
 ---
 kind: signature
-hmac: d5f23073e7a3295f7e4a8a52be94ef977bca9ddfa4e6505a58094dcb0fed9f3c
+hmac: 8ca861365f61439945fec65cdf54ce885efa286b10e323aabac3ad13b629f3b0
 
 ...
